inclusão de comentário no script

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <footer class="footer">
         Rodapé
     </footer>
+    <!-- Script que carrega a saudação inicial do site -->
     <script src="js/pessoal.js"></script>
 </body>
 </html>
