--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="div02">
             <div class="curriculum">
-                <a href="curriculum.html"><img src="/img/imgcv.jpg" alt="Curriculum Vitae"></a>
+                <a href="curriculum.html"><img src="../site/img/imgcv.jpg" alt="Curriculum Vitae"></a>
                 <div class="inner">
                     <h4>Meu curriculum vitae</h4>
                     <p>aqui um texto resumido para apresentação do curriculum.</p>
@@ -41,7 +41,7 @@
         </div>
         <div class="div03">
                 <div class="projetos">
-                        <a href="projetos.html"><img src="/img/imgprojeto.jpg" alt="Meus Projetos"></a>
+                        <a href="projetos.html"><img src="../site/img/imgprojeto.jpg" alt="Meus Projetos"></a>
                         <div class="inner">
                             <h4>Meus Projetos</h4>
                             <p>aqui um texto resumido para apresentação dos seus projetos.</p>
