Coreção do caminho do arquivo reset.css

--- a/index.html
+++ b/index.html
@@ -11,16 +11,12 @@
     <link rel="icon" href="img/ds.jpg">
 
     <!-- Crossbrowser -->
-    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="css/reset.css">
 
     <!-- Folha de estilo do site -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body onload="carregar()">
-    <header>
-        <a href="index.html">Dener Silva</a>
-    </header>
-    <hr>
     <section class="section-01">
         <div class="div01">
             <h1 id="saudacao"></h1>
