--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <section class="section-01">
         <div class="div01">
             <h1 id="saudacao"></h1>
-            <h3>Sobre mim</h3>
-            <p>Aperfeiçoando meus conhecimentos na área de desenvolvimento de Sistemas Web com Javascript, CSS3 e HTML5. <br>
+            <h3>Um pouco sobre mim</h3>
+            <p>Estou diariamente aperfeiçoando meus conhecimentos na área de desenvolvimento de Sistemas Web com Javascript, CSS3 e HTML5. <br>
             Adoto por hobby a prática de esportes. <br>
             Minha maior conquista, sem dúvida, a minha família.</p>
         </div>
