--- a/index.html
+++ b/index.html
@@ -13,8 +13,18 @@
     <!-- Crossbrowser -->
     <link rel="stylesheet" href="css/reset.css">
 
+    <!-- Fonte da google -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
+
+    <!-- WOW -->
+    <link rel="stylesheet" href="css/animate.css">
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet"  type="text/css" href="/css/fonts/css/all.css">   
+
     <!-- Folha de estilo do site -->
     <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body onload="carregar()">
     <section class="section-01">
@@ -27,28 +37,37 @@
         </div>
         <div class="div02">
             <div class="curriculum">
-                <a href="curriculum.html"><img src="../site/img/imgcv.jpg" alt="Curriculum Vitae"></a>
+                <a href="curriculum.html"><img src="img/imgcv.jpg" alt="Curriculum Vitae"></a>
                 <div class="inner">
                     <h4>Meu curriculum vitae</h4>
-                    <p>aqui um texto resumido para apresentação do curriculum.</p>
+                    <p>Sou um profissional da área de TI, atualmente focado em desenvolvimento front-end.</p>
                     <a href="curriculum.html"> Acesse clicando aqui </a> <!--Aqui pode ter um botão-->
                 </div>
             </div>
         </div>
         <div class="div03">
                 <div class="projetos">
-                        <a href="projetos.html"><img src="../site/img/imgprojeto.jpg" alt="Meus Projetos"></a>
+                        <a href="projetos.html"><img src="img/imgprojeto.jpg" alt="Meus Projetos"></a>
                         <div class="inner">
                             <h4>Meus Projetos</h4>
-                            <p>aqui um texto resumido para apresentação dos seus projetos.</p>
+                            <p>Tenho desenvolvido projetos utilizando JavaScript, HTML5 e CSS.</p>
                             <a href="projetos.html"> Acesse clicando aqui </a> <!--Aqui pode ter um botão-->
                         </div>
                     </div>
                 </div>
     </section>
-    <hr>
-    <footer class="footer">
-        Rodapé
+
+    <footer class="rodape">
+        <div class="social">
+            <a href="https://www.facebook.com/denerffsilva" target="_blank"><i class="fab fa-facebook-square"></i></a>
+            <a href="http://www.linkedin.com/in/dener-silva" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="github.com/DenerSilva2017" target="_blank"><i class="fab fa-github-square"></i></a>
+        </div>
+        <div class="copyright">
+            <p>
+                Copyright &copy; Dener Silva - Todos os direitos reservados.
+            </p>
+        </div>
     </footer>
     <!-- Script que carrega a saudação inicial do site -->
     <script src="js/pessoal.js"></script>
