--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="css/animate.css">
 
     <!-- Font Awesome -->
-    <link rel="stylesheet"  type="text/css" href="/css/fonts/css/all.css">   
+    <link rel="stylesheet"  type="text/css" href="../site/css/fonts/css/all.css">   
 
     <!-- Folha de estilo do site -->
     <link rel="stylesheet" href="css/style.css">
@@ -59,8 +59,8 @@
 
     <footer class="rodape">
         <div class="social">
-            <a href="https://www.facebook.com/denerffsilva" target="_blank"><i class="fab fa-facebook-square"></i></a>
-            <a href="http://www.linkedin.com/in/dener-silva" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="facebook.com/denerffsilva" target="_blank"><i class="fab fa-facebook-square"></i></a>
+            <a href="linkedin.com/in/dener-silva" target="_blank"><i class="fab fa-linkedin"></i></a>
             <a href="github.com/DenerSilva2017" target="_blank"><i class="fab fa-github-square"></i></a>
         </div>
         <div class="copyright">
