--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
     </section>
     <footer class="rodape">
         <div class="social">
-            <a href="facebook.com/denerffsilva" target="_blank"><i class="fab fa-facebook-square"></i></a>
-            <a href="linkedin.com/in/dener-silva" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="github.com/DenerSilva2017" target="_blank"><i class="fab fa-github-square"></i></a>
+            <a href="www.facebook.com/denerffsilva" target="_blank"><i class="fab fa-facebook-square"></i></a>
+            <a href="www.linkedin.com/in/dener-silva" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="www.github.com/DenerSilva2017" target="_blank"><i class="fab fa-github-square"></i></a>
         </div>
         <div class="copyright">
             <p>Copyright &copy; Dener Silva - Todos os direitos reservados.</p>
