caminho foto dener

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section class="section-01">
         <h1 id="saudacao"></h1>
         <div class="imgdener">
-            <img src="/img/denersilva.png" alt="Dener Silva">
+            <img src="../site/img/denersilva.png" alt="Dener Silva">
         </div>
         <p>Estou diariamente aperfeiçoando meus conhecimentos na área de desenvolvimento de Sistemas Web com Javascript, CSS3 e HTML5. <br>
         Adoto por hobby a prática de esportes. <br>
