Adicionado css e html curriculum

--- a/curriculum.html
+++ b/curriculum.html
@@ -1,13 +1,121 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Curriculum</h1>
-    <a href="index.html"><h2>Voltar</h2></a> 
-</body>
+  <head>
+      <meta charset="UTF-8">
+      <title>Dener Silva - Curriculum</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name= "author" content="Dener Silva">
+      <meta name="robots" content="index, follow">
+      <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <meta name="keywords" content="desenvolvedor, developer, freelancer, front-end, web, frontend, html, css, javascript, mysql, sites, websites, belém, ananindeua, pará">
+      <link rel="icon" href="img/ds.jpg">
+  
+      <!-- Crossbrowser -->
+      <link rel="stylesheet" type="text/css" href="css/reset.css">
+  
+      <!-- Fonte da google -->
+      <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
+  
+      <!-- WOW -->
+      <link rel="stylesheet" type="text/css" href="css/animate.css">
+  
+      <!-- Font Awesome -->
+      <link rel="stylesheet"  type="text/css" href="css/fonts/css/all.css"> 
+
+      <!-- Folha de estilo do curriculum -->
+      <link rel="stylesheet" type="text/css" href="/css/curriculum.css">      
+
+      <!-- CSS para impressão -->
+      <link rel="stylesheet" type="text/css" href="/css/print.css" media="print">
+
+  </head>
+  <body>
+    <section class="section-cv">
+
+      <div class="cabecalho">
+        <div class="foto">
+          <img src="/img/denersilva.png">
+        </div>
+        <div class="informacoes">
+          <h3>Dener Francisco Ferreira da Silva</h3>
+          <p><i class="far fa-address-card"></i> Brasileiro, 37 anos, casado, CNH: A/B.<br>
+             <i class="fas fa-map-marker-alt"></i> Bairro do Coqueiro – Ananindeua/PA<br>
+             <a href="http://www.linkedin.com/in/dener-silva" target="_blank"><i class="fab fa-linkedin"></i> www.linkedin.com/in/dener-silva</a></br>
+             <a href="mailto:dener.pa@gmail.com?subject=site" title=""><i class="far fa-envelope"></i> dener.pa@gmail.com</a></br>
+             <i class="fas fa-mobile-alt"></i>  (91) 98224-2901</p>
+        </div>
+      </div>
+
+      <h4>Objetivo</h4>
+      <p>Desenvolvedor Front-end ou áreas afins.</p>
+      
+      <h4>Formação Acadêmica</h4>
+      <p><b>Tecnólogo em Análise e Desenvolvimento de Sistemas </b>| Faculdade Estácio de Sá <br>
+         Concluído em Junho de 2017</p>
+
+      <h4>Cursos de Aperfeiçoamento</h4>
+      <p style="margin-bottom: .25rem;"><b>CEV Treinamentos em Informática</b> | 2018/2019 (Certificados com carga de 40h cada).</p>
+      <div class="lista container">
+          <div class="lista row">
+          <div class="col-6 col-md-4">
+            <li>Word 2016</li>
+          </div>
+          <div class="col-6 col-md-4">
+            <li>Algoritmos</li>
+          </div>
+          <div class="col-6 col-md-4">
+            <li>MySQL</li>
+          </div>
+          <div class="col-6 col-md-4">
+            <li>HTML5</li>
+          </div>
+          <div class="col-6 col-md-4">
+            <li>PHP</li>
+          </div>
+          <div class="col-6 col-md-4">
+            <li>POO PHP</li>
+          </div>
+          <div class="col-6 col-md-4">
+            <li>Java</li>
+          </div>
+          <div class="col-6 col-md-4">
+            <li>POO Java</li>
+          </div>
+          <div class="col-6 col-md-4">
+            <li>Python</li>
+          </div>
+        </div>
+      </div>
+
+      <h4>Experiência Profissional</h4> 
+      <p><b>Freelancer</b> | Março/2013 - Dias atuais<br>
+      <b>Atividades</b>: Desenvolvimento e manutenção de sites para web, manutenção e instalação de computadores, implementação de sistemas para gestão comercial, manutenção e instalação em rede de dados e internet, designer gráfico.</p>
+
+      <p><b>Nova Garantia Ltda | Analista de Sistemas</b> | Julho/2007 – Março/2013</br>
+      <b>Atividades</b>: Manutenção a rede de dados e internet, telefonia PABX e VOIP, computadores, impressoras, servidores, backups e sistemas internos.</p> 
+
+      <p><b>Garantia Serviços Ltda | Auxiliar de Escritório</b> | Janeiro/2002 – Novembro/2006<br>
+        <b>Atividades</b>: Digitação, orçamentos, manutenção de computadores, backups, manutenção a rede de dados e internet, impressoras e sistemas internos.</p> 
+
+      <h4>Conhecimentos</h4> 
+      <p class="mb-2" ><b>Nível Avançado:</b> Manutenção de computadores; Redes de dados e internet; Windows; Word; Excel; Power Point; Segurança digital.</p>
+      <p class="mb-2"><b>Nível Intermediário:</b> JavaScript; CSS3 (metodologias ITCSS e RSCSS); HTML5; Bootstrap; Java SE; MySQL; Linux; Photoshop; Inglês (cursando nível técnico).</p> 
+      <p><b>Nível Básico:</b> Git; GitHub; PHP; Python; Corel Draw; Marketing Digital; Logística.</p>
+
+      <h4>Projeto Profissional Atual</h4>
+      <p>Desenvolvendo um site institucional moderno, otimizado e responsivo, com HTML5, CSS3, JavaScrip e Bootstrap, utilizando o Visual Studio Code.</p> 
+      <hr>
+        <form class="text-center">
+            <input class = "btn btn-outline-secondary d-print-none wow lightSpeedIn" data-wow-delay="1s" 
+            type="button" value="Imprimir" onClick="window.print()"/>
+        </form>
+      </section>
+      <a href="index.html"><h2>Voltar</h2></a>   
+
+    <!-- Chamada para o WOW -->
+    <script src="js/wow.min.js"></script>
+      <script>
+        new WOW().init();
+      </script>
+  </body>
 </html>
