--- a/curriculum.html
+++ b/curriculum.html
@@ -23,10 +23,10 @@
       <link rel="stylesheet"  type="text/css" href="css/fonts/css/all.css"> 
 
       <!-- Folha de estilo do curriculum -->
-      <link rel="stylesheet" type="text/css" href="/css/curriculum.css">      
+      <link rel="stylesheet" type="text/css" href="../site//css/curriculum.css">      
 
       <!-- CSS para impressão -->
-      <link rel="stylesheet" type="text/css" href="/css/print.css" media="print">
+      <link rel="stylesheet" type="text/css" href="../site/css/print.css" media="print">
 
   </head>
   <body>
@@ -34,7 +34,7 @@
 
       <div class="cabecalho">
         <div class="foto">
-          <img src="/img/denersilva.png">
+          <img src="../site/img/denersilva.png">
         </div>
         <div class="informacoes">
           <h3>Dener Francisco Ferreira da Silva</h3>
