--- a/curriculum.html
+++ b/curriculum.html
@@ -23,10 +23,10 @@
       <link rel="stylesheet"  type="text/css" href="css/fonts/css/all.css"> 
 
       <!-- Folha de estilo do curriculum -->
-      <link rel="stylesheet" type="text/css" href="../site//css/curriculum.css">      
+      <link rel="stylesheet" type="text/css" href="css/curriculum.css">      
 
       <!-- CSS para impressão -->
-      <link rel="stylesheet" type="text/css" href="../site/css/print.css" media="print">
+      <link rel="stylesheet" type="text/css" href="css/print.css" media="print">
 
   </head>
   <body>
@@ -34,77 +34,62 @@
 
       <div class="cabecalho">
         <div class="foto">
-          <img src="../site/img/denersilva.png">
+          <img src="img/denersilva.png">
         </div>
         <div class="informacoes">
           <h3>Dener Francisco Ferreira da Silva</h3>
           <p><i class="far fa-address-card"></i> Brasileiro, 37 anos, casado, CNH: A/B.<br>
              <i class="fas fa-map-marker-alt"></i> Bairro do Coqueiro – Ananindeua/PA<br>
              <a href="http://www.linkedin.com/in/dener-silva" target="_blank"><i class="fab fa-linkedin"></i> www.linkedin.com/in/dener-silva</a></br>
-             <a href="mailto:dener.pa@gmail.com?subject=site" title=""><i class="far fa-envelope"></i> dener.pa@gmail.com</a></br>
+             <a href="mailto:dener.pa@gmail.com?subject=" title=""><i class="far fa-envelope"></i> dener.pa@gmail.com</a></br>
              <i class="fas fa-mobile-alt"></i>  (91) 98224-2901</p>
         </div>
       </div>
 
       <h4>Objetivo</h4>
-      <p>Desenvolvedor Front-end ou áreas afins.</p>
+      <p>Setor de informática ou administrativo</p>
       
       <h4>Formação Acadêmica</h4>
       <p><b>Tecnólogo em Análise e Desenvolvimento de Sistemas </b>| Faculdade Estácio de Sá <br>
          Concluído em Junho de 2017</p>
 
       <h4>Cursos de Aperfeiçoamento</h4>
-      <p style="margin-bottom: .25rem;"><b>CEV Treinamentos em Informática</b> | 2018/2019 (Certificados com carga de 40h cada).</p>
-      <div class="lista container">
-          <div class="lista row">
-          <div class="col-6 col-md-4">
-            <li>Word 2016</li>
-          </div>
-          <div class="col-6 col-md-4">
-            <li>Algoritmos</li>
-          </div>
-          <div class="col-6 col-md-4">
-            <li>MySQL</li>
-          </div>
-          <div class="col-6 col-md-4">
-            <li>HTML5</li>
-          </div>
-          <div class="col-6 col-md-4">
-            <li>PHP</li>
-          </div>
-          <div class="col-6 col-md-4">
-            <li>POO PHP</li>
-          </div>
-          <div class="col-6 col-md-4">
-            <li>Java</li>
-          </div>
-          <div class="col-6 col-md-4">
-            <li>POO Java</li>
-          </div>
-          <div class="col-6 col-md-4">
-            <li>Python</li>
-          </div>
-        </div>
+      <p><b>CEV Treinamentos em Informática</b> | 2018/2019 (Certificados com carga de 40h cada).</p>
+      <div class="lista">
+        <ul>
+          <li>Word 2016</li>
+          <li>Algoritmos</li>
+          <li>MySQL</li>
+          <li>HTML5</li>
+          <li>PHP</li>
+          <li>POO PHP</li>
+          <li>Java</li>
+          <li>POO Java</li>
+          <li>Python</li>
+        </ul>
       </div>
 
       <h4>Experiência Profissional</h4> 
       <p><b>Freelancer</b> | Março/2013 - Dias atuais<br>
-      <b>Atividades</b>: Desenvolvimento e manutenção de sites para web, manutenção e instalação de computadores, implementação de sistemas para gestão comercial, manutenção e instalação em rede de dados e internet, designer gráfico.</p>
+      <b>Atividades</b>: Manutenção e instalação de computadores, implementação de sistemas para gestão comercial, manutenção e instalação em rede de dados e internet, desenvolvimento de sites para web; designer gráfico.</p>
 
       <p><b>Nova Garantia Ltda | Analista de Sistemas</b> | Julho/2007 – Março/2013</br>
-      <b>Atividades</b>: Manutenção a rede de dados e internet, telefonia PABX e VOIP, computadores, impressoras, servidores, backups e sistemas internos.</p> 
+      <b>Atividades</b>: Manutenção a rede de dados e internet, telefonia PABX e VOIP, computadores, impressoras, servidores backups e procedimentos em sistemas internos.</p> 
 
       <p><b>Garantia Serviços Ltda | Auxiliar de Escritório</b> | Janeiro/2002 – Novembro/2006<br>
-        <b>Atividades</b>: Digitação, orçamentos, manutenção de computadores, backups, manutenção a rede de dados e internet, impressoras e sistemas internos.</p> 
+        <b>Atividades</b>: Orçamentos, manutenção de computadores, backups, manutenção a rede de dados e internet, impressoras e e procedimentos em sistemas internos.</p> 
 
       <h4>Conhecimentos</h4> 
       <p class="mb-2" ><b>Nível Avançado:</b> Manutenção de computadores; Redes de dados e internet; Windows; Word; Excel; Power Point; Segurança digital.</p>
-      <p class="mb-2"><b>Nível Intermediário:</b> JavaScript; CSS3 (metodologias ITCSS e RSCSS); HTML5; Bootstrap; Java SE; MySQL; Linux; Photoshop; Inglês (cursando nível técnico).</p> 
-      <p><b>Nível Básico:</b> Git; GitHub; PHP; Python; Corel Draw; Marketing Digital; Logística.</p>
+      <p class="mb-2"><b>Nível Intermediário:</b> JavaScript; CSS3 (Grid layout, Flexbox e Media query); HTML5; Bootstrap; Git; GitHub; Java SE; MySQL; Photoshop; Marketing Digital; Inglês (cursando nível técnico). </p> 
+      <p><b>Nível Básico:</b> PHP; Python; Linux; Corel Draw; Logística.</p>
 
-      <h4>Projeto Profissional Atual</h4>
-      <p>Desenvolvendo um site institucional moderno, otimizado e responsivo, com HTML5, CSS3, JavaScrip e Bootstrap, utilizando o Visual Studio Code.</p> 
+      <h4>Projeto Atual</h4>
+      <p>Desenvolvendo um site pessoal moderno, otimizado e responsivo, com HTML5, CSS3 e JavaScript.</p> 
       <hr>
+      <button class="btn-imprimir" onClick="window.print()">Imprimir</button>
+
+
         <form class="text-center">
             <input class = "btn btn-outline-secondary d-print-none wow lightSpeedIn" data-wow-delay="1s" 
             type="button" value="Imprimir" onClick="window.print()"/>
