--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <img src="img/imgprojeto.jpg" alt="Meus Projetos">
                 <div class="inner">
                     <h4>Meus Projetos</h4>
-                    <p>Tenho desenvolvido projetos utilizando JavaScript, HTML5 e CSS.</p>
+                    <p>Tenho desenvolvido projetos utilizando HTML5, CSS3 e JavaScript.</p>
                     <div class="botao wow fadeInLeft" data-wow-duration="2s">
                         <a href="projetos.html"><button class="btn"> Acesse </button></a>
                     </div>
@@ -63,13 +63,24 @@
     </section>
     <footer class="rodape">
         <div class="social">
+            <h2>Social</h2>
             <a href="https://www.facebook.com/denerffsilva" target="_blank"><i class="fab fa-facebook-square"></i></a>
             <a href="https://www.linkedin.com/in/dener-silva/" target="_blank"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/DenerSilva2017" target="_blank"><i class="fab fa-github-square"></i></a>
         </div>
-        <div class="copyright">
-            <p>Copyright &copy; Dener Silva - Todos os direitos reservados.</p>
+        <div class="mapa">
+            <h2>Navegação</h2>
+            <a href="">Curriculum</a>
+            <a href="">Projetos</a>
         </div>
+        <div>
+            <h2>Contatos</h2>
+            <p>E-mail: <a href="mailto:dener.pa@gmail.com?subject=">dener.pa@gmail.com</a></p>
+            <p>Telefone: <a href="091982242901">091 98224-2901</a></p>
+        </div>
+            <div class="copyright">
+                <p>Copyright &copy; Dener Silva - Todos os direitos reservados.</p>
+            </div>
 
     </footer>
     
