--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="imgdener">
             <img src="img/denersilva.png" alt="Dener Silva">
         </div>
-        <p>Estou diariamente aperfeiçoando meus conhecimentos na área de desenvolvimento de Sistemas Web com Javascript, CSS3 e HTML5. <br>
+        <p>Estou diariamente aperfeiçoando meus conhecimentos na área de desenvolvimento de Sistemas Web.<br>
         Adoto por hobby a prática de esportes. <br>
         Minha maior conquista, sem dúvida, a minha família.</p>
 
@@ -76,7 +76,7 @@
         <div>
             <h2>Contatos</h2>
             <p>E-mail: <a href="mailto:dener.pa@gmail.com?subject=">dener.pa@gmail.com</a></p>
-            <p>Telefone: <a href="091982242901">091 98224-2901</a></p>
+            <p>Telefone: <a href="tel:091982242901">091 98224-2901</a></p>
         </div>
             <div class="copyright">
                 <p>Copyright &copy; Dener Silva - Todos os direitos reservados.</p>
