--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
         </div>
         <div>
             <h2>Contatos</h2>
-            <p>E-mail: <a href="mailto:dener.pa@gmail.com?subject=">dener.pa@gmail.com</a></p>
-            <p>Telefone: <a href="tel:091982242901">091 98224-2901</a></p>
+            <p>E-mail: <a href="mailto:dener.pa@gmail.com">dener.pa@gmail.com</a></p>
+            <p>Telefone: <a href="tel:+55-091-98224-2901">091 98224-2901</a></p>
         </div>
             <div class="copyright">
                 <p>Copyright &copy; Dener Silva - Todos os direitos reservados.</p>
