--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name= "author" content="Dener Silva">
     <meta name="robots" content="index, follow">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="format-detection" content="telephone=no">
     <meta name="keywords" content="desenvolvedor, developer, freelancer, front-end, web, frontend, html, css, javascript, mysql, sites, websites, belém, ananindeua, pará">
     <link rel="icon" href="img/ds.jpg">
 
@@ -61,6 +62,7 @@
             </div>
         </div>
     </section>
+    
     <footer class="rodape">
         <div class="social">
             <h2>Social</h2>
@@ -68,20 +70,20 @@
             <a href="https://www.linkedin.com/in/dener-silva/" target="_blank"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/DenerSilva2017" target="_blank"><i class="fab fa-github-square"></i></a>
         </div>
-        <div class="mapa">
+        <div class="navegacao">
             <h2>Navegação</h2>
-            <a href="">Curriculum</a>
-            <a href="">Projetos</a>
+            <a href="curriculum.html">Curriculum</a>
+            <a href="projetos.html">Projetos</a>
         </div>
-        <div>
+        <div class="contatos">
             <h2>Contatos</h2>
             <p>E-mail: <a href="mailto:dener.pa@gmail.com">dener.pa@gmail.com</a></p>
-            <p>Telefone: <a href="tel:+55-091-98224-2901">091 98224-2901xxx</a></p>
+            <p>Telefone: <a href="tel:+55-091-98224-2901">091 98224-2901</a></p>
+            <p>WhatSapp: <a href="https://wa.me/5591982242901" target="_blank"><u>Clique aqui</u></a></p>
         </div>
             <div class="copyright">
                 <p>Copyright &copy; Dener Silva - Todos os direitos reservados.</p>
             </div>
-
     </footer>
     
     <!-- Script que carrega a saudação inicial do site -->
