--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         </div>
         <div class="navegacao">
             <h2>Navegação</h2>
-            <a href="curriculum.html">Curriculum</a>
-            <a href="projetos.html">Projetos</a>
+            <a href="curriculum.html"><u>Curriculum</u></a> | 
+            <a href="projetos.html"><u>Projetos</u></a>
         </div>
         <div class="contatos">
             <h2>Contatos</h2>
@@ -81,9 +81,9 @@
             <p>Telefone: <a href="tel:+55-091-98224-2901">091 98224-2901</a></p>
             <p>WhatSapp: <a href="https://wa.me/5591982242901" target="_blank"><u>Clique aqui</u></a></p>
         </div>
-            <div class="copyright">
-                <p>Copyright &copy; Dener Silva - Todos os direitos reservados.</p>
-            </div>
+        <div class="copyright">
+            <p>Copyright &copy; Dener Silva - Todos os direitos reservados.</p>
+        </div>
     </footer>
     
     <!-- Script que carrega a saudação inicial do site -->
