--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
         </div>
         <div class="contatos">
             <h2>Contatos</h2>
-            <p>E-mail: <a href="mailto:dener.pa@gmail.com">dener.pa@gmail.com</a></p>
-            <p>Telefone: <a href="tel:+55-091-98224-2901">091 98224-2901</a></p>
-            <p>WhatSapp: <a href="https://wa.me/5591982242901" target="_blank"><u>Clique aqui</u></a></p>
+            <p><i class="far fa-envelope"></i> <a href="mailto:dener.pa@gmail.com">dener.pa@gmail.com</a></p>
+            <p><i class="fas fa-mobile-alt"></i> <a href="tel:+55-091-98224-2901">091 98224-2901</a></p>
+            <p><i class="fab fa-whatsapp"></i> <a href="https://wa.me/5591982242901" target="_blank"><u>Mande-me uma mensagem</u></a></p>
         </div>
         <div class="copyright">
             <p>Copyright &copy; Dener Silva - Todos os direitos reservados.</p>
