Mudanças no curriculum

--- a/curriculum.html
+++ b/curriculum.html
@@ -42,18 +42,19 @@
              <i class="fas fa-map-marker-alt"></i> Bairro do Coqueiro – Ananindeua/PA<br>
              <a href="http://www.linkedin.com/in/dener-silva" target="_blank"><i class="fab fa-linkedin"></i> www.linkedin.com/in/dener-silva</a></br>
              <a href="mailto:dener.pa@gmail.com?subject=" title=""><i class="far fa-envelope"></i> dener.pa@gmail.com</a></br>
-             <i class="fas fa-mobile-alt"></i>  (91) 98224-2901</p>
+             <p><i class="fas fa-mobile-alt"></i> <a href="tel:+55-091-98224-2901">(91) 98224-2901</a></p>
+            </p>
         </div>
       </div>
 
-      <h4>Objetivo</h4>
+      <h4><i class="fas fa-bullseye"></i> Objetivo</h4>
       <p>Setor de informática ou administrativo</p>
       
-      <h4>Formação Acadêmica</h4>
+      <h4><i class="fas fa-graduation-cap"></i> Formação Acadêmica</h4>
       <p><b>Tecnólogo em Análise e Desenvolvimento de Sistemas </b>| Faculdade Estácio de Sá <br>
          Concluído em Junho de 2017</p>
 
-      <h4>Cursos de Aperfeiçoamento</h4>
+      <h4><i class="fas fa-laptop-code"></i> Cursos de Aperfeiçoamento</h4>
       <p><b>CEV Treinamentos em Informática</b> | 2018/2019 (Certificados com carga de 40h cada).</p>
       <div class="lista">
         <ul>
@@ -69,7 +70,7 @@
         </ul>
       </div>
 
-      <h4>Experiência Profissional</h4> 
+      <h4><i class="fas fa-briefcase"></i> Experiência Profissional</h4> 
       <p><b>Freelancer</b> | Março/2013 - Dias atuais<br>
       <b>Atividades</b>: Manutenção e instalação de computadores, implementação de sistemas para gestão comercial, manutenção e instalação em rede de dados e internet, desenvolvimento de sites para web; designer gráfico.</p>
 
@@ -79,23 +80,39 @@
       <p><b>Garantia Serviços Ltda | Auxiliar de Escritório</b> | Janeiro/2002 – Novembro/2006<br>
         <b>Atividades</b>: Orçamentos, manutenção de computadores, backups, manutenção a rede de dados e internet, impressoras e e procedimentos em sistemas internos.</p> 
 
-      <h4>Conhecimentos</h4> 
+      <h4><i class="far fa-lightbulb"></i> Conhecimentos</h4> 
       <p class="mb-2" ><b>Nível Avançado:</b> Manutenção de computadores; Redes de dados e internet; Windows; Word; Excel; Power Point; Segurança digital.</p>
       <p class="mb-2"><b>Nível Intermediário:</b> JavaScript; CSS3 (Grid layout, Flexbox e Media query); HTML5; Bootstrap; Git; GitHub; Java SE; MySQL; Photoshop; Marketing Digital; Inglês (cursando nível técnico). </p> 
       <p><b>Nível Básico:</b> PHP; Python; Linux; Corel Draw; Logística.</p>
 
-      <h4>Projeto Atual</h4>
+      <h4><i class="fas fa-project-diagram"></i> Projeto Atual</h4>
       <p>Desenvolvendo um site pessoal moderno, otimizado e responsivo, com HTML5, CSS3 e JavaScript.</p> 
-      <hr>
-      <button class="btn-imprimir" onClick="window.print()">Imprimir</button>
-
-
-        <form class="text-center">
-            <input class = "btn btn-outline-secondary d-print-none wow lightSpeedIn" data-wow-delay="1s" 
-            type="button" value="Imprimir" onClick="window.print()"/>
-        </form>
+      <div class="btn-imprimir">
+        <button onClick="window.print()"><i class="fas fa-print"></i> Imprimir</button>
+      </div>
       </section>
-      <a href="index.html"><h2>Voltar</h2></a>   
+
+      <footer class="rodape">
+        <div class="social">
+            <a href="https://www.facebook.com/denerffsilva" target="_blank"><i class="fab fa-facebook-square"></i></a>
+            <a href="https://www.linkedin.com/in/dener-silva/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/DenerSilva2017" target="_blank"><i class="fab fa-github-square"></i></a>
+        </div>
+        <div class="navegacao">
+            <a href="index.html"><i class="fas fa-home"></i> <u>Home</u></a> | 
+            <a href="projetos.html"><i class="fas fa-project-diagram"></i> <u>Projetos</u></a>
+        </div>
+        <div class="contatos">
+            <p><i class="far fa-envelope"></i> <a href="mailto:dener.pa@gmail.com">dener.pa@gmail.com</a></p>
+            <p><i class="fas fa-mobile-alt"></i> <a href="tel:+55-091-98224-2901">091 98224-2901</a></p>
+            <p><i class="fab fa-whatsapp"></i> <a href="https://wa.me/5591982242901" target="_blank"><u>Envie-me uma mensagem</u></a></p>
+        </div>
+        <div class="copyright">
+            <p>Copyright &copy; Dener Silva - Todos os direitos reservados.</p>
+        </div>
+    </footer>
+
+
 
     <!-- Chamada para o WOW -->
     <script src="js/wow.min.js"></script>
