--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
         <div class="contatos">
             <h2>Contatos</h2>
             <p><i class="far fa-envelope"></i> <a href="mailto:dener.pa@gmail.com">dener.pa@gmail.com</a></p>
-            <p><i class="fas fa-mobile-alt"></i> <a href="tel:+55-091-98224-2901">091 98224-2901</a></p>
-            <p><i class="fab fa-whatsapp"></i> <a href="https://wa.me/5591982242901" target="_blank"><u>Mande-me uma mensagem</u></a></p>
+            <p><i class="fas fa-mobile-alt"></i> <a href="tel:+55-091-98224-2901">(91) 98224-2901</a></p>
+            <p><i class="fab fa-whatsapp"></i> <a href="https://wa.me/5591982242901" target="_blank"><u>Envie-me uma mensagem</u></a></p>
         </div>
         <div class="copyright">
             <p>Copyright &copy; Dener Silva - Todos os direitos reservados.</p>
