Mudança diretório cv

--- a/curriculum.html
+++ b/curriculum.html
@@ -23,7 +23,7 @@
       <link rel="stylesheet"  type="text/css" href="css/fonts/css/all.css"> 
 
       <!-- Folha de estilo do curriculum -->
-      <link rel="stylesheet" type="text/css" href="css/curriculum.css">      
+      <link rel="stylesheet" type="text/css" href="../site/css/curriculum.css">
 
       <!-- CSS para impressão -->
       <link rel="stylesheet" type="text/css" href="css/print.css" media="print">
