Melhoramento imagem fundo

--- a/curriculum.html
+++ b/curriculum.html
@@ -23,7 +23,7 @@
       <link rel="stylesheet"  type="text/css" href="css/fonts/css/all.css"> 
 
       <!-- Folha de estilo do curriculum -->
-      <link rel="stylesheet" type="text/css" href="../site/css/curriculum.css">
+      <link rel="stylesheet" type="text/css" href="css/curriculum.css">
 
       <!-- CSS para impressão -->
       <link rel="stylesheet" type="text/css" href="css/print.css" media="print">
@@ -111,8 +111,6 @@
             <p>Copyright &copy; Dener Silva - Todos os direitos reservados.</p>
         </div>
     </footer>
-
-
 
     <!-- Chamada para o WOW -->
     <script src="js/wow.min.js"></script>
