--- a/projetos.html
+++ b/projetos.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Dener Silva - Projetos</title>
 </head>
 <body>
-    <h1>Projetos</h1>
     <h3>Página em construção</h3>
-    <a href="index.html"><h2>Voltar</h2></a> 
-    
+    <a href="javascript:void(0)" onClick="history.go(-1); return false;">Voltar</a>
 </body>
 </html>
