--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="curriculum">
                 <img src="img/imgcv.jpg" alt="Curriculum Vitae">
                 <div class="inner">
-                    <h4>Meu curriculum vitae</h4>
+                    <h4>Meu Curriculum Vitae</h4>
                     <p>Sou um profissional da área de TI, atualmente focado em desenvolvimento front-end.</p>
                     <div class="botao wow fadeInRight" data-wow-duration="2s">
                         <a href="curriculum.html"><button class="btn"> Acesse </button></a>
@@ -51,9 +51,9 @@
         </div>
         <div class="div03">
             <div class="projetos">
-                <img src="img/imgprojeto.jpg" alt="Meus Projetos">
+                <img src="img/imgprojeto.jpg" alt="Portfólio">
                 <div class="inner">
-                    <h4>Meus Projetos</h4>
+                    <h4>Meu Portfólio</h4>
                     <p>Tenho desenvolvido projetos utilizando HTML5, CSS3 e JavaScript.</p>
                     <div class="botao wow fadeInLeft" data-wow-duration="2s">
                         <a href="projetos.html"><button class="btn"> Acesse </button></a>
@@ -66,14 +66,14 @@
     <footer class="rodape">
         <div class="social">
             <h2>Social</h2>
-            <a href="https://www.facebook.com/denerffsilva" target="_blank"><i class="fab fa-facebook-square"></i></a>
-            <a href="https://www.linkedin.com/in/dener-silva/" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com/DenerSilva2017" target="_blank"><i class="fab fa-github-square"></i></a>
+            <p><a href="https://www.facebook.com/denerffsilva" target="_blank"><i class="fab fa-facebook-square"></i></a>
+               <a href="https://www.linkedin.com/in/dener-silva/" target="_blank"><i class="fab fa-linkedin"></i></a>
+               <a href="https://github.com/DenerSilva2017" target="_blank"><i class="fab fa-github-square"></i></a></p>
         </div>
         <div class="navegacao">
             <h2>Navegação</h2>
-            <a href="curriculum.html"><u>Curriculum</u></a> | 
-            <a href="projetos.html"><u>Projetos</u></a>
+            <p><a href="curriculum.html"><i class="fas fa-outdent"></i> <u>Curriculum</u></a> | 
+               <a href="projetos.html"><i class="fas fa-project-diagram"></i> <u>Portfólio</u></a></p>
         </div>
         <div class="contatos">
             <h2>Contatos</h2>
