--- a/projetos.html
+++ b/projetos.html
@@ -5,9 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dener Silva - Projetos</title>
+
+    <link rel="stylesheet" type="text/css" href="../site/css/projetos.css">
+
 </head>
 <body>
-    <h3>Página em construção</h3>
-    <a href="javascript:void(0)" onClick="history.go(-1); return false;">Voltar</a>
+    <div class="container">
+        <div class="box">
+            <div class="imgBx">
+                <img src="img1.jpg">
+            </div>
+            <div class="content">
+                <h2>Title</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua.</p>
+                <a href="#">Read More</a>
+            </div>
+        </div>
+        <div class="box">
+            <div class="imgBx">
+                <img src="img2.jpg">
+            </div>
+            <div class="content">
+                <h2>Title</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua.</p>
+                <a href="#">Read More</a>
+            </div>
+        </div>
+        <div class="box">
+            <div class="imgBx">
+                <img src="img3.jpg">
+            </div>
+            <div class="content">
+                <h2>Title</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua.</p>
+                <a href="#">Read More</a>
+            </div>
+        </div>
+        <div class="box">
+            <div class="imgBx">
+                <img src="img4.jpg">
+            </div>
+            <div class="content">
+                <h2>Title</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua.</p>
+                <a href="#">Read More</a>
+            </div>
+        </div>
+    </div>    
+
 </body>
 </html>
