--- a/projetos.html
+++ b/projetos.html
@@ -4,58 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Dener Silva - Projetos</title>
-
     <link rel="stylesheet" type="text/css" href="../site/css/projetos.css">
-
+    <title>Dener Silva - Portfólio</title>
 </head>
 <body>
-    <div class="container">
-        <div class="box">
-            <div class="imgBx">
-                <img src="img1.jpg">
+    <h1>Portfólio</h1>
+    <div class="flex">
+        <div class="container">
+            <div class="box">
+                <div class="imgBx">
+                    <img src="../site/img/grid.jpg">
+                </div>
+                <div class="content">
+                    <h2>CSS Grid Layout</h2>
+                    <p>É um método bi-dimensional para criação de layout CSS que oferece a possibilidade de "layoutar" itens da página com uso de linhas e colunas.</p>
+                    <a href="#">Veja aqui</a>
+                </div>
             </div>
-            <div class="content">
-                <h2>Title</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua.</p>
-                <a href="#">Read More</a>
+            <div class="box">
+                <div class="imgBx">
+                    <img src="../site/img/flex.jpg">
+                </div>
+                <div class="content">
+                    <h2>Flexbox Grid</h2>
+                    <p>Foi projetado como um modelo de layout unidimensional, e como um método que poderia oferecer distribuição de espaço entre itens numa interface.</p>
+                    <a href="#">Veja aqui</a>
+                </div>
             </div>
-        </div>
-        <div class="box">
-            <div class="imgBx">
-                <img src="img2.jpg">
+            <div class="box">
+                <div class="imgBx">
+                    <img src="../site/img/media.jpg">
+                </div>
+                <div class="content">
+                    <h2>Media Queries</h2>
+                    <p>Consiste de um media type e pelo menos uma expressão que limita o escopo das folhas de estilo usando media features, tal como largura, altura e cor.</p>
+                    <a href="#">Veja aqui</a>
+                </div>
             </div>
-            <div class="content">
-                <h2>Title</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua.</p>
-                <a href="#">Read More</a>
+            <div class="box">
+                <div class="imgBx">
+                    <img src="../site/img/js.jpg">
+                </div>
+                <div class="content">
+                    <h2>JavaScript</h2>
+                    <p>É uma linguagem de programação interpretada de alto nível, dinâmica, fracamente tipificada, prototype-based e multi-paradigma.</p>
+                    <a href="#">Veja aqui</a>
+                </div>
             </div>
-        </div>
-        <div class="box">
-            <div class="imgBx">
-                <img src="img3.jpg">
-            </div>
-            <div class="content">
-                <h2>Title</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua.</p>
-                <a href="#">Read More</a>
-            </div>
-        </div>
-        <div class="box">
-            <div class="imgBx">
-                <img src="img4.jpg">
-            </div>
-            <div class="content">
-                <h2>Title</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua.</p>
-                <a href="#">Read More</a>
-            </div>
-        </div>
-    </div>    
-
+        </div>    
+    </div>
 </body>
 </html>
